--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ ark-ff = "0.3.0"
 ark-std = "0.3.0"
 num-bigint = "0.4.0"
 all_asserts = "2.3.1"
+mcl_rust = "1.0.1"
+#mcl_ark = { git = "https://github.com/herumi/mcl-ark", branch = "main" }
 
 [dev-dependencies]
 criterion = "0.5.1"
